Added fonts and finished markup

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
+@import "utils/variables";
+@import "utils/fonts";
+@import "mixins/media";
+
 @import "common/global";
-
-@import "common/header";
-
-@import "common/footer";
+@import "common/main-header";
