--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,7 @@
-// Mobile first
 $mediaWidthMobile: 320px;
 $mediaWidthTablet: 768px;
 $mediaWidthTabletHorizontal: 1024px;
 $mediaWidthLaptop: 1366px;
+
+$bebas: 'Bebas Neue', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
