--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,8 @@
 @import "utils/variables";
 @import "utils/fonts";
+@import "utils/swiper";
 @import "mixins/media";
 
 @import "common/global";
 @import "common/main-header";
+@import "common/page-container";
