--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -1,23 +1,27 @@
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-family: $montserrat;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+  color: inherit;
 }
 
 ul {
