--- a/src/styles/common/main-header.scss
+++ b/src/styles/common/main-header.scss
@@ -1,1 +1,26 @@
+.main-header {
+  display: flex;
+  justify-content: center;
 
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1240px;
+    width: 100%;
+    padding-top: 32px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  &__logo-link {
+    font-size: 26px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+  &__sign-up {
+    font-size: 16px;
+    border: 1px #fff solid;
+    border-radius: 6%;
+    padding: 13px 15px;
+  }
+}
