styling in progress

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,25 @@
 @import "utils/variables";
+
 @import "utils/fonts";
+
 @import "utils/swiper";
+
 @import "mixins/media";
 
 @import "common/global";
+
 @import "common/main-header";
+
 @import "common/page-container";
+
+@import "common/main";
+
+@import "common/info";
+
+@import "common/advantages";
+
+@import "common/slider";
+
+@import "common/terms";
+
+@import "common/card";
