--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -6,6 +6,8 @@
 
 html {
   box-sizing: border-box;
+  background: no-repeat center center fixed linear-gradient(315deg, #ae320a 19.87%, #f75d2b 80.11%), #0a0e20;
+  background-size: cover;
 }
 
 body {
@@ -13,6 +15,18 @@ body {
   margin: 0;
   color: white;
   font-family: $montserrat;
+  position: relative;
+
+  &::after {
+    content: "";
+    top: 0;
+    right: 0;
+    position: absolute;
+    background-image: url("../img/second.svg");
+    width: 100%;
+    height: 100%;
+    // background-position: right top;
+  }
 }
 
 img {
