--- a/src/styles/common/main-header.scss
+++ b/src/styles/common/main-header.scss
@@ -1,10 +1,12 @@
 .main-header {
   display: flex;
   justify-content: center;
+  margin-bottom: 120px;
 
   &__container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     max-width: 1240px;
     width: 100%;
     padding-top: 32px;
@@ -17,9 +19,10 @@
     font-weight: 600;
     text-transform: uppercase;
   }
+
   &__sign-up {
     font-size: 16px;
-    border: 1px #fff solid;
+    border: 1px #ffffff solid;
     border-radius: 6%;
     padding: 13px 15px;
   }
