--- a/src/styles/common/page-container.scss
+++ b/src/styles/common/page-container.scss
@@ -2,15 +2,17 @@
   position: fixed;
   height: 100vh;
   width: 100vw;
+  left: 0;
+  top: 0;
   z-index: -1;
 
-  &__swiper {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-  }
+  // &__swiper {
+  //   position: absolute;
+  //   left: 0;
+  //   top: 0;
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
   &__bg {
     background: linear-gradient(315deg, #ae320a 19.87%, #f75d2b 80.11%), #0a0e20;
