--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,5 +3,6 @@ $mediaWidthTablet: 768px;
 $mediaWidthTabletHorizontal: 1024px;
 $mediaWidthLaptop: 1366px;
 
-$bebas: 'Bebas Neue', sans-serif;
-$montserrat: 'Montserrat', sans-serif;
+$bebas: "Bebas Neue", sans-serif;
+$montserrat: "Montserrat", sans-serif;
+
