--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,9 +8,9 @@
 
 @import "common/global";
 
-@import "common/main-header";
+@import "common/body-bg";
 
-@import "common/page-container";
+@import "common/main-header";
 
 @import "common/main";
 
