--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -6,28 +6,41 @@
 
 html {
   box-sizing: border-box;
-  background: no-repeat center center fixed linear-gradient(315deg, #ae320a 19.87%, #f75d2b 80.11%), #0a0e20;
-  background-size: cover;
 }
 
 body {
+  display: block;
   padding: 0;
   margin: 0;
   color: white;
   font-family: $montserrat;
   position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: 1.5s ease-in-out;
+
 
   &::after {
     content: "";
     top: 0;
     right: 0;
     position: absolute;
-    background-image: url("../img/second.svg");
+    background-image: url("../img/first.svg");
+    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     // background-position: right top;
   }
 }
+
+// .body-bg {
+//   background: no-repeat center center fixed linear-gradient(315deg, #ae320a 19.87%, #f75d2b 80.11%), #0a0e20;
+//   opacity: 1;
+//   transition: background 0.5s ease-out;
+
+
+//
+// }
 
 img {
   max-width: 100%;
