added svg on bg and hover for links

--- a/src/styles/common/main-header.scss
+++ b/src/styles/common/main-header.scss
@@ -26,5 +26,9 @@
     border: 1px #ffffff solid;
     border-radius: 6%;
     padding: 13px 15px;
+    overflow: hidden;
+    position: relative;
+
+    @include hover-button;
   }
 }
