--- a/src/styles/common/body-bg.scss
+++ b/src/styles/common/body-bg.scss
@@ -10,7 +10,6 @@
     height: 100vh;
     width: 100vw;
     position: fixed;
-    // z-index: -1;
 
     &--active {
       opacity: 1;
@@ -20,16 +19,45 @@
       background: no-repeat center center fixed linear-gradient(315deg, #ae320a 19.87%, #f75d2b 80.11%), #0a0e20;
     }
 
+    &:first-child::after {
+
+      @include svg-bg(url("../img/first.svg"));
+    }
+
     &:nth-child(2) {
       background: no-repeat center center fixed linear-gradient(315deg, #37c058 19.87%, #4bdb6d 80.11%), #0a0e20;
+    }
+
+    &:nth-child(2)::after {
+
+      @include svg-bg(url("../img/second.svg"));
+
+      background-position-y: bottom;
     }
 
     &:nth-child(3) {
       background: no-repeat center center fixed linear-gradient(315deg, #ffc060 19.87%, #ffe79a 80.11%), #0a0e20;
     }
 
+    &:nth-child(3)::after {
+
+      @include svg-bg(url("../img/third.svg"));
+
+      width: 800px;
+      height: 1000px;
+      background-size: contain;
+      background-position-y: bottom;
+    }
+
     &:last-child {
       background: no-repeat center center fixed linear-gradient(315deg, #8fbe15 19.87%, #aad50e 80.11%), #0a0e20;
+    }
+
+    &:last-child::after {
+
+      @include svg-bg(url("../img/fourth.svg"));
+
+      background-position-y: bottom;
     }
   }
 }
