--- a/src/styles/common/body-bg.scss
+++ b/src/styles/common/body-bg.scss
@@ -6,10 +6,10 @@
 
   &__bg {
     opacity: 0;
-    transition: 1.5s ease-in-out;
     height: 100vh;
     width: 100vw;
     position: fixed;
+    transition: opacity 1.5s ease-in-out;
 
     &--active {
       opacity: 1;
