--- a/src/styles/common/info.scss
+++ b/src/styles/common/info.scss
@@ -5,11 +5,25 @@
   width: 100%;
   z-index: 1;
 
+  @include media-tablet {
+    max-width: 500px;
+  }
+
   &__title {
     font-weight: 600;
     font-size: 46px;
     line-height: 54px;
     margin-top: 0;
     margin-bottom: 24px;
+
+    @include media-tablet {
+      font-size: 32px;
+      line-height: 44px;
+    }
+
+    @include media-mobile {
+      font-size: 22px;
+      line-height: 28px;
+    }
   }
 }
