--- a/src/styles/common/main.scss
+++ b/src/styles/common/main.scss
@@ -3,7 +3,17 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: 1200px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 40px;
+  padding-right: 20px;
+  padding-bottom: 20px;
   width: 100%;
+  column-gap: 40px;
+
+  @include media-mobile {
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    column-gap: 0;
+  }
 }
