--- a/src/styles/mixins/media.scss
+++ b/src/styles/mixins/media.scss
@@ -1,27 +1,27 @@
-@mixin media-tablet {
+@mixin media-mobile {
 
-  @media (min-width: $mediaWidthTablet) {
+  @media (max-width: $mediaWidthTablet) {
     @content;
   }
 }
 
-@mixin media-tablet-horizontal {
+@mixin media-tablet {
 
-  @media (min-width: $mediaWidthTabletHorizontal) {
+  @media (max-width: $mediaWidthTabletHorizontal) {
     @content;
   }
 }
 
 @mixin media-laptop {
 
-  @media (min-width: $mediaWidthLaptop) {
+  @media (max-width: $mediaWidthLaptop) {
     @content;
   }
 }
 
 @mixin media-custom($width) {
 
-  @media (min-width: $width) {
+  @media (max-width: $width) {
     @content;
   }
 }
