--- a/src/styles/utils/swiper.scss
+++ b/src/styles/utils/swiper.scss
@@ -23,7 +23,13 @@
   background-color: #000000;
 }
 
-// .swiper-container-horizontal .swiper-pagination-bullets .swiper-pagination-bullet:not(:last-child) {
-//   margin-right: 16px;
-//   margin-left: 0;
-// }
+@media (max-width: 768px) {
+  .swiper-pagination {
+    left: 0 !important;
+  }
+
+  .swiper-pagination-bullets .swiper-pagination-bullet {
+    width: 10px !important;
+    height: 10px !important;
+  }
+}
