--- a/src/styles/utils/swiper.scss
+++ b/src/styles/utils/swiper.scss
@@ -1,6 +1,6 @@
 .swiper-container {
   height: 100%;
-  padding-top: 20px !important;
+  padding-top: 20px !important; // Единственный возможный способ зарерайдить стили свайпера в данном и последующих случаях, к сожалению. Долго пыталась сделать красивее.
 }
 
 .swiper-pagination {
